Fully Featured & Tested * Defined ScrupalModuleInfo to provide module information to the plugin via "scrupalModule" key * Added AutoPlugins: JavaAppPackaing, HeaderPlugin, SbtBundle, JavaVersionCheckPlugin, ShPlugin, GitVesioning * Provided Typesafe and Sonatype repositories to the project * Initialized settings for compiler, scalariform, unidoc, SonatypePublishing, Site, GhPages * Removed "hello" stuff from the seed * Defined the standard directory structure * Added the shell prompt. * Added an sbt "scripted" test case (simple) * Revised the README to contain more info * Added the sbt-sonatype plugin so we can publish scrupal-sbt to sonatype